# KataScript

./: .gitattributes  .gitignore  CMakeLists.txt  KataScript  KataScript.sln  KataScript.vcxproj  KataScript.vcxproj.filters  LICENSE  Makefile  README.md  build_g++.sh
VSCodeExtension/katascriptlang/: CHANGELOG.md  README.md  katascriptlang-0.0.1.vsix  katascriptlang-0.0.2.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
VSCodeExtension/katascriptlang/syntaxes/: katascript.tmLanguage.json
Visual Studio Solution/: KataScript.sln
Visual Studio Solution/Interpreter/: KataScript.vcxproj  KataScript.vcxproj.filters
Visual Studio Solution/Tests/: KataScriptTests.vcxproj  KataScriptTests.vcxproj.filters
docs/: Readme.md  index.md
jssrc/: build.sh  kscript.js  kscript.wasm  kscript.wasm.tmp52325d5  main.cpp
samples/: demo.ks
src/: Main.cpp  Main.h
src/Interpreter/: Main.cpp
src/Scripting/: KataScript.cpp  KataScript.hpp  KataScriptStringUtils.hpp
src/Tests/: KataScriptTests.cpp
